-*- mode: outline; fill-column: 78 -*-

* Changes since 0.6.0:
** API changes
- IOLIB.SOCKETS:LOOKUP-HOST was renamed to LOOKUP-HOSTNAME
- IOLIB.SOCKETS:IPV6-SOCKET-P was renamed to SOCKET-IPV6-P
- When creating an AF_LOCAL socket, IOLIB.SOCKETS:MAKE-SOCKET accepts :FILE as
  :TYPE synonim of :LOCAL
- IOLIB.SOCKETS:ACCEPT-CONNECTION : keyword arg TIMEOUT has been coalesced
  into WAIT
- IOLIB.SOCKETS:CONNECT : keyword arg TIMEOUT has been coalesced into WAIT
** New features
- Add support for abstract UNIX addresses (patch by Julian Stecklina)
- UNIX addresses are now printed as strings. Abstract addresses have a leading #\@
** Bug fixes:
- EVENT-DISPATCH now calculates the distance to the next timer correctly
  (reported by Ariel Badichi)
- fixed possible fd load in the the select() multiplexer (reported by Ariel
  Badichi)
- reading from socket streams with non-blocking FDs now works (reported by
  Chaitanya Gupta)
- make RESOLVER-ERROR actually a subtype of IOLIB-ERROR (reported by Ariel Badichi)
- socket syscalls that return EINTR now work
** Misc
- Sources have been reorganized, ASDF system files are now inside src/